cmake_minimum_required(VERSION 3.19)
project(untitled)
INCLUDE_DIRECTORIES("C:/MinGW/include/c++/9.2.0/poco")
set(CMAKE_CXX_STANDARD 17)

add_executable(main main.cpp)
add_executable(onkar onkar.cpp)
add_executable(3 3.cpp)
add_executable(2 2.cpp)
add_executable(workingout. workingout..cpp)
add_executable(spojmpilot spojmpilot.cpp)
add_executable(coinsatcoder coinsatcoder.cpp)
add_executable(sushiatcoder sushiatcoder.cpp)
add_executable(codeforces_diverse_garland codeforces_diverse_garland.cpp)
add_executable(codeforces_nice_garland codeforces_nice_garland.cpp)
add_executable(hackerrank_prime_xor hackerrank_prime_xor.cpp)
add_executable(kstones_atcoder kstones_atcoder.cpp)
add_executable(missing_and_repeating_gfg missing_and_repeating_gfg.cpp)
add_executable(longest_palindromic_substring_leetcode longest_palindromic_substring_leetcode.cpp)
add_executable(wiggle_subsequence_leetcode wiggle_subsequence_leetcode.cpp)
add_executable(longest_increasing_subsequence. longest_increasing_subsequence..cpp)
add_executable(maximum_sum_increasing_subsequence maximum_sum_increasing_subsequence.cpp)
add_executable(rough rough.cpp)
add_executable(vanya_and_gcd_array_hackerearth vanya_and_gcd_array_hackerearth.cpp)
add_executable(wigglesubsequence_leetcode wigglesubsequence_leetcode.cpp)
add_executable(k_concatenation_Maximum_sum_leetcode k_concatenation_Maximum_sum_leetcode.cpp)
add_executable(Get_the_maximum_leetcode Get_the_maximum_leetcode.cpp)
add_executable(rough2 rough2.cpp)

add_executable(Maximal_Rectangle_leetcode Maximal_Rectangle_leetcode.cpp)
add_executable(Maximal_Square_leetcode Maximal_Square_leetcode.cpp)
add_executable(Minimum_Window_substring_leetcode Minimum_Window_substring_leetcode.cpp)
add_executable(Mininum_Size_Subarray_sum_leetcode Mininum_Size_Subarray_sum_leetcode.cpp)
add_executable(Maximum_length_of_repeated_subarray_leetcode Maximum_length_of_repeated_subarray_leetcode.cpp)
add_executable(Target_sum_leetcode Target_sum_leetcode.cpp)
add_executable(unique_paths_leetcode unique_paths_leetcode.cpp)
add_executable(unique_paths_2_leetcode unique_paths_2_leetcode.cpp)
add_executable(minimum_path_sum_leetcode minimum_path_sum_leetcode.cpp)
add_executable(Divisor_Game_leetcode Divisor_Game_leetcode.cpp)
add_executable(check_if_graph_contains_cycle_part1 check_if_graph_contains_cycle_part1.cpp)
add_executable(longest_bitonic_subsequence longest__bitonic_subsequence.cpp)
add_executable(Maximum_non_overlapping_bridges_pepcoding Maximum_non_overlapping_bridges_pepcoding.cpp)
add_executable(Russian_Doll_Envelopes_leetcode Russian_Doll_Envelopes_leetcode.cpp)
add_executable(Island_and_water_problem_gpart2 Island_and_water_problem_gpart2.cpp)
add_executable(Maximum_area_Histogram_leetcode Maximum_area_Histogram_leetcode.cpp)
add_executable(Next_Greater_to_left Next_Greater_to_left.cpp)
add_executable(Next_smaller_to_left_right Next_smaller_to_left_right.cpp)
add_executable(Decrease_elements_to_make_an_array_zig_zag_leetcode Decrease_elements_to_make_an_array_zig_zag_leetcode.cpp)
add_executable(coin_change_amazon coin_change_amazon.cpp)
add_executable(minimum_time_to_rot_all_oranges_amazon minimum_time_to_rot_all_oranges_amazon.cpp)
add_executable(celebrity_problem_amazon_gfg celebrity_problem_amazon_gfg.cpp)
add_executable(First_non_repeating_character_interviewbits First_non_repeating_character_interviewbits.cpp)
add_executable(Book_allocation_gfg Book_allocation_gfg.cpp)
add_executable(Capacity_to_ship_packages_in_D_Days_leetcode Capacity_to_ship_packages_in_D_Days_leetcode.cpp)
add_executable(split_array_largest_sum_leetcode split_array_largest_sum_leetcode.cpp)
add_executable(Minimum_number_of_modifications_to_reach_destinaition_gfg Minimum_number_of_modifications_to_reach_destinaition_gfg.cpp)
add_executable(Minimum_time_taken_by_each_job_to_be_completed_in_DAG_gfg Minimum_time_taken_by_each_job_to_be_completed_in_DAG_gfg.cpp)
add_executable(dijkstra dijkstra.cpp)
add_executable(labyrinth labyrinth.cpp)
add_executable(Building_roads_cses Building_roads_cses.cpp)
add_executable(Message_route_cses Message_route_cses.cpp)
add_executable(queries_on_number_of_points_inside_the_circle_leetcode queries_on_number_of_points_inside_the_circle_leetcode.cpp)
add_executable(dijkstra_me dijkstra_me.cpp)
add_executable(Maximum_product_subarray Maximum_product_subarray.cpp)
add_executable(Longest_Repeating_subsequence_gfg Longest_Repeating_subsequence_gfg.cpp)
add_executable(Longest_reapeating_and_non_overlapping_substring_gfg Longest_reapeating_and_non_overlapping_substring_gfg.cpp)
add_executable(Decode_ways_leetcode Decode_ways_leetcode.cpp)
add_executable(word_break_leetcode word_break_leetcode.cpp)
add_executable(paint_house_gfg paint_house_gfg.cpp)
add_executable(Path_with_Maximum_Gold_leetcode Path_with_Maximum_Gold_leetcode.cpp)
add_executable(course_schedule course_schedule.cpp)
add_executable(Best_time_to_buy_and_sell_stock_leetcode Best_time_to_buy_and_sell_stock_leetcode.cpp)
add_executable(Longest_Valid_Parenthesis_gfg Longest_Valid_Parenthesis_gfg.cpp)
add_executable(Building_teams Building_teams.cpp)
add_executable(Best_time_to_buy_and_sell_stock_3_leetcode Best_time_to_buy_and_sell_stock_3_leetcode.cpp)
add_executable(distinct_subsequences_leetcode distinct_subsequences_leetcode.cpp)
add_executable(NUmber_of_substrings_with_one_only_leetcode NUmber_of_substrings_with_one_only_leetcode.cpp)
add_executable(generate_all_valid_parenthesis_of_size_n generate_all_valid_parenthesis_of_size_n.cpp)
add_executable(house_robber_2_leetcode house_robber_2_leetcode.cpp)
add_executable(Wild_card_matching_leetcode Wild_card_matching_leetcode.cpp)
add_executable(2_keys_leetcode 2_keys_leetcode.cpp)
add_executable(interview_dp_coin_change "only dp/interview_dp_coin_change.cpp")
add_executable(extra "only dp/extra.cpp")
add_executable(count_of_palindromic_strings_leetcode count_of_palindromic_substrings_leetcode.cpp)
add_executable(when_ranks_are_not_given when_ranks_are_given.cpp)
add_executable(when_ranks_are_not_repeating_and_not_given when_ranks_are_not_repeating_and_not_given.cpp)
add_executable(when_ranks_are_given when_ranks_are_given.cpp)
add_executable(when_ranks_are_not_given_repeating when_ranks_are_not_given_repeating.cpp)
add_executable(minimum_cost_with_all_path_printing minimum_cost_with_all_path_printing.cpp)
add_executable(count_number_of_distinct_subsequences_of_a_string count_number_of_distinct_subsequences_of_a_string.cpp)
add_executable(print_all_the_longest_increasing_subsequences print_all_the_longest_increasing_subsequences.cpp)

add_executable(graph_basic_connected_2dgrid graph_basic_connected_2dgrid.cpp)
add_executable(maximum_no_of_edges_you_can_add_such_that_graph_remains_bipartite maximum_no_of_edges_you_can_add_such_that_graph_remains_bipartite.cpp)
add_executable(word_search_leetcode word_search_leetcode.cpp)
add_executable(graph_minimum_distance_to_connect_two_islands graph_minimum_distance_to_connect_two_islands.cpp)
add_executable(deep_copy_of_graph_using_classes deep_copy_of_graph_using_classes.cpp)
add_executable(check_whether_the_given_graph_is_tree check_whether_the_given_graph_is_tree.cpp)
add_executable(dp_stone_game_leetcode dp_stone_game_leetcode.cpp)
add_executable(dp_Partition_array_for_Maximum_sum_leetcode dp_Partition_array_for_Maximum_sum_leetcode.cpp)
add_executable(Word_ladder_bfs_leetcode Word_ladder_bfs_leetcode.cpp)
add_executable(Longest_increasing_path_matrix_leetcode Longest_increasing_path_matrix_leetcode.cpp)
add_executable(count_of_smaller_numbers_after_self_leetcode count_of_smaller_numbers_after_self_leetcode.cpp)
add_executable(Word_Break_II_leetcode Word_Break_II_leetcode.cpp)
add_executable(Merge_k_sorted_linked_list Merge_k_sorted_linked_list.cpp)
add_executable(Word_search_II Word_search_II.cpp)
add_executable(3_Sum_leetcoode 3_Sum_leetcoode.cpp)
add_executable(3_sum_closest_leetcode 3_sum_closest_leetcode.cpp)
add_executable(letter_combinations_of_phone_number_leetcode letter_combinations_of_phone_number_leetcode.cpp)
add_executable(Merge_intervals_leetcode Merge_intervals_leetcode.cpp)
add_executable(find_first_and_last_element_in_sorted_array_leetcode find_first_and_last_element_in_sorted_array_leetcode.cpp)
add_executable(Path_in_Zig_Zag_Labelled_Tree_leetcode Path_in_Zig_Zag_Labelled_Tree_leetcode.cpp)
add_executable(Count_and_say_leetcode Count_and_say_leetcode.cpp)
add_executable(Number_of_Islands_leetcode Number_of_Islands_leetcode.cpp)
add_executable(Gas_statIon_leetcode Gas_statIon_leetcode.cpp)
add_executable(Find_Peak_element_leetcode Find_Peak_element_leetcode.cpp)
add_executable(Spiral_Matrix_leetcode Spiral_Matrix_leetcode.cpp)
add_executable(Surrounded_Regions_leetcode Surrounded_Regions_leetcode.cpp)
add_executable(Palindrome_partitioning_leetcode Palindrome_partitioning_leetcode.cpp)
add_executable(Evaluate_reverse_poish_notataion_leetcode Evaluate_reverse_poish_notataion_leetcode.cpp)
add_executable(Perfect_squares_leetcode Perfect_squares_leetcode.cpp)
add_executable(Search_in_rotated_sorted_array_leetcode Search_in_rotated_sorted_array_leetcode.cpp)
add_executable(Longest_consecutive_sequence_leetcode Longest_consecutive_sequence_leetcode.cpp)
add_executable(Fraction_to_recurring_Decimal_leetcode Fraction_to_recurring_Decimal_leetcode.cpp)
add_executable(Course_schedule_II_leetcode Course_schedule_II_leetcode.cpp)
add_executable(Longest_substring_with_atleast_k_repeating_characters_leetcode Longest_substring_with_atleast_k_repeating_characters_leetcode.cpp)
add_executable(Pokemon_army_codeforces Pokemon_army_codeforces.cpp)
add_executable(Increasing_triplet_subsequence_leetcode_ Increasing_triplet_subsequence_leetcode_.cpp)
add_executable(increasing_triplet_subsequence_method_2_leetcode increasing_triplet_subsequence_method_2_leetcode.cpp)
add_executable(Top_k_frequent_words_leetcode Top_k_frequent_words_leetcode.cpp)
add_executable(Minimum_cost_tickets_leetcode Minimum_cost_tickets_leetcode.cpp)
add_executable(Baisc_Calculator_II_leetcode Baisc_Calculator_II_leetcode.cpp)
add_executable(Best_time_to_buy_and_sell_stock_III_leetcode Best_time_to_buy_and_sell_stock_III_leetcode.cpp)
add_executable(Two_cost_Scheduling_leetcode Two_cost_Scheduling_leetcode.cpp)
add_executable(Coin_game_winner_where_every_player_has_three_choices_gfg  "Coin_game_winner_where_every_player_has_three_choices_gfg .cpp")
add_executable(Count_inversions_gfg Count_inversions_gfg.cpp)
add_executable(Jump_Game_II_leetcode Jump_Game_II_leetcode.cpp)
add_executable(egg_dropping_puzzle_gfg egg_dropping_puzzle_gfg.cpp)
add_executable(Shopping_offers_leetcode Shopping_offers_leetcode.cpp)
add_executable(intrvw_microsoft intrvw_microsoft.cpp)
add_executable(Burst_Ballon_leetcode Burst_Ballon_leetcode.cpp)
add_executable(Unique_Binary_Search_Trees_leetcode Unique_Binary_Search_Trees_leetcode.cpp)
add_executable(Unique_binary_search_Trees_II_leetcode Unique_binary_search_Trees_II_leetcode.cpp)
add_executable(longest_substring_with_atmost_k_distinct_characters_lintcode longest_substring_with_atmost_k_distinct_characters_lintcode.cpp)
add_executable(Construct_binary_Tree_from_inorder_and_preorder_traversal Construct_binary_Tree_from_inorder_and_preorder_traversal.cpp)

add_executable(oops_first_program_C++ OOPS/oops_first_program_C++.cpp)
add_executable(kadane_algo_gfg kadane_algo_gfg.cpp)
add_executable(count_square_submatrices_with_all_ones count_square_submatrices_with_all_ones.cpp)
add_executable(No_of_good_ways_to_split_a_string No_of_good_ways_to_split_a_string.cpp)
add_executable(Count_number_of_teams_leetocde Count_number_of_teams_leetocde.cpp)
add_executable(Count_sorted_vowel_strings_leetcode Count_sorted_vowel_strings_leetcode.cpp)
add_executable(Count_substrings_that_differ_by_one_char_leetcode Count_substrings_that_differ_by_one_char_leetcode.cpp)
add_executable(Minimum_falling_path_sum_leetcode Minimum_falling_path_sum_leetcode.cpp)
add_executable(Stone_Game_II_leetcode Stone_Game_II_leetcode.cpp)
add_executable(Find_Count_of_single_valued_subtrees_leetcode Find_Count_of_single_valued_subtrees_leetcode.cpp)
add_executable(Longest_mountain_in_an_array_leetcode Longest_mountain_in_an_array_leetcode.cpp)